# actix-telegram

./: Cargo.toml  README.md
actix-telegram-derive/: Cargo.toml
actix-telegram-derive/src/: generate.rs  lib.rs  parse.rs  types.rs
examples/: client.rs  polling.rs  server.rs
src/: lib.rs  main.rs  methods.rs  types.rs
src/actors/: application.rs  mod.rs  telegram_api.rs  telegram_bot.rs  telegram_server.rs  telegram_worker.rs
src/actors/telegram_server/: mod.rs  tls_server.rs  types.rs
src/application/: mod.rs  resourse.rs
src/methods/: add_sticker_to_set.rs  answer_callback_query.rs  answer_inline_query.rs  answer_pre_checkout_query.rs  answer_shipping_query.rs  create_new_sticker_set.rs  delete_chat_photo.rs  delete_chat_sticker_set.rs  delete_message.rs  delete_sticker_from_set.rs  delete_webhook.rs  edit_message_caption.rs  edit_message_live_location.rs  edit_message_media.rs  edit_message_reply_markup.rs  edit_message_text.rs  export_chat_invite_link.rs  forward_message.rs  get_chat.rs  get_chat_administrators.rs  get_chat_member.rs  get_chat_members_count.rs  get_file.rs  get_game_high_scores.rs  get_me.rs  get_sticker_set.rs  get_updates.rs  get_user_profile_photos.rs  get_webhook_info.rs  kick_chat_member.rs  leave_chat.rs  mod.rs  optimized_get_updates.rs  pin_chat_message.rs  promote_chat_member.rs  restrict_chat_member.rs  send_animation.rs  send_audio.rs  send_chat_action.rs  send_contact.rs  (+25 more)
src/raw/: mod.rs
src/raw/methods/: add_sticker_to_set.rs  answer_callback_query.rs  answer_inline_query.rs  answer_pre_checkout_query.rs  answer_shipping_query.rs  create_new_sticker_set.rs  delete_chat_photo.rs  delete_chat_sticker_set.rs  delete_message.rs  delete_sticker_from_set.rs  edit_message_caption.rs  edit_message_live_location.rs  edit_message_media.rs  edit_message_reply_markup.rs  edit_message_text.rs  export_chat_invite_link.rs  forward_message.rs  get_chat.rs  get_chat_administrators.rs  get_chat_member.rs  get_chat_members_count.rs  get_file.rs  get_game_high_scores.rs  get_sticker_set.rs  get_updates.rs  get_user_profile_photos.rs  kick_chat_member.rs  leave_chat.rs  mod.rs  pin_chat_message.rs  promote_chat_member.rs  restrict_chat_member.rs  send_animation.rs  send_audio.rs  send_chat_action.rs  send_contact.rs  send_document.rs  send_game.rs  send_invoice.rs  send_location.rs  (+22 more)
src/raw/types/: animation.rs  audio.rs  callback_query.rs  chat.rs  chat_member.rs  chat_photo.rs  chosen_inline_result.rs  contact.rs  document.rs  encrypted_credentials.rs  encrypted_passport_element.rs  file.rs  force_reply.rs  game.rs  game_high_score.rs  inline_keyboard_button.rs  inline_keyboard_markup.rs  inline_query.rs  inline_query_result_article.rs  inline_query_result_audio.rs  inline_query_result_cached_audio.rs  (+68 more)
src/types/: animation.rs  audio.rs  callback_query.rs  chat.rs  chat_member.rs  chat_photo.rs  chosen_inline_result.rs  contact.rs  document.rs  encrypted_credentials.rs  encrypted_passport_element.rs  file.rs  force_reply.rs  game.rs  game_high_score.rs  inline_keyboard_button.rs  inline_keyboard_markup.rs  inline_query.rs  inline_query_result_article.rs  inline_query_result_audio.rs  inline_query_result_cached_audio.rs  inline_query_result_cached_document.rs  inline_query_result_cached_gif.rs  inline_query_result_cached_mpeg4_gif.rs  inline_query_result_cached_photo.rs  inline_query_result_cached_sticker.rs  inline_query_result_cached_video.rs  inline_query_result_cached_voice.rs  inline_query_result_contact.rs  inline_query_result_document.rs  inline_query_result_game.rs  inline_query_result_gif.rs  inline_query_result_location.rs  inline_query_result_mpeg4_gif.rs  inline_query_result_photo.rs  inline_query_result_venue.rs  inline_query_result_video.rs  inline_query_result_voice.rs  input_contact_message_content.rs  input_location_message_content.rs  (+46 more)
(+33 files in other folders)
