[package]
name = "actix-telegram"
version = "0.1.0-alpha4"
authors = ["Marat Safin <jeizsm@gmail.com>"]
description = "telegram bot api lib based on actix"
repository = "https://github.com/jeizsm/actix-telegram"
license = "MIT"

[dependencies]
actix = "0.7.5"
actix-web = { version = "0.7.13" }
actix-net = { version = "0.1.1" }
actix-telegram-derive = { path="./actix-telegram-derive", version="0.1.1" }
multipart-rfc7578 = { version = "0.6.0", features=["actix-web"] }
futures = "0.1.25"
serde = "1.0.79"
serde_derive = "1.0.79"
serde_json = "1.0.32"
tokio = "0.1.11"
log = "0.4.5"
env_logger = "0.5.13"
rustls = { version = "0.14.0", optional = true }
openssl = { version = "0.10.12", optional = true }
native-tls = { version = "0.2.1", optional = true }
bitflags = "1.0.4"

[features]
default = ["tls-server", "rust-tls"]
server = []
tls-server = ["server"]
rust-tls = ["rustls", "actix-web/rust-tls", "actix-net/rust-tls"]
ssl = ["openssl", "actix-web/ssl", "actix-net/ssl"]
tls = ["native-tls", "actix-web/tls", "actix-net/tls"]
