[package]
name = "actix-telegram"
version = "0.0.5"
authors = ["Marat Safin <jeizsm@gmail.com>"]
description = "telegram bot api lib based on actix"
repository = "https://github.com/jeizsm/actix-telegram"
license = "MIT"

[dependencies]
actix = "0.7.9"
actix-web = "0.7.18"
actix-net = "0.2.6"
actix-telegram-derive = { path="./actix-telegram-derive", version="0.2" }
multipart-rfc7578 = { version = "0.6", features = ["actix-web"] }
futures = "0.1"
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
tokio = "0.1"
log = "0.4"
env_logger = "0.6"
rustls = { version = "0.14", optional = true }
openssl = { version = "0.10", optional = true }
native-tls = { version = "0.2", optional = true }
bitflags = "1.0"
failure = "0.1"

[features]
default = ["tls-server", "rust-tls"]
server = []
tls-server = ["server"]
rust-tls = ["rustls", "actix-web/rust-tls", "actix-net/rust-tls"]
ssl = ["openssl", "actix-web/ssl", "actix-net/ssl"]
tls = ["native-tls", "actix-web/tls", "actix-net/tls"]
