[package]
name = "actix-telegram-derive"
version = "0.1.0"
authors = ["Marat Safin <jeizsm@gmail.com>"]
description = "derive for actix-telegram"
repository = "https://github.com/jeizsm/actix-telegram"
license = "MIT"

[lib]
proc-macro = true

[dependencies]
syn = "0.14.8"
quote = "0.6.6"
proc-macro2 = "0.4.12"
